welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: illegal start of simple expression
	if (vacation == false):{
                              ^